--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "clsx": "^2.1.1",
     "install": "^0.13.0",
     "next": "14.2.5",
     "npm": "^10.8.2",
