--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "npm": "^10.8.2",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "swiper": "^11.1.9"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
