--- a/package.json
+++ b/package.json
@@ -6,27 +6,41 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:push": "prisma db push",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@prisma/client": "^5.18.0",
+    "@tanstack/react-query": "^5.52.1",
+    "@tanstack/react-query-devtools": "^5.52.1",
+    "axios": "^1.7.5",
     "clsx": "^2.1.1",
     "install": "^0.13.0",
     "next": "14.2.5",
     "npm": "^10.8.2",
+    "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
+    "react-sortablejs": "^6.1.4",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
-    "swiper": "^11.1.9"
+    "sortablejs": "^1.15.2",
+    "swiper": "^11.1.9",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/sortablejs": "^1.15.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "typescript": "^5"
