--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^5.18.0",
     "@tanstack/react-query": "^5.52.1",
     "@tanstack/react-query-devtools": "^5.52.1",
+    "@uploadthing/react": "^6.7.2",
     "axios": "^1.7.5",
     "clsx": "^2.1.1",
     "install": "^0.13.0",
@@ -33,6 +34,7 @@
     "sass": "^1.77.8",
     "sortablejs": "^1.15.2",
     "swiper": "^11.1.9",
+    "uploadthing": "^6.13.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
