--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@prisma/client": "^5.18.0",
+    "@siberiacancode/reactuse": "^0.0.65",
     "@tanstack/react-query": "^5.52.1",
     "@tanstack/react-query-devtools": "^5.52.1",
     "@uploadthing/react": "^6.7.2",
@@ -35,7 +36,8 @@
     "sortablejs": "^1.15.2",
     "swiper": "^11.1.9",
     "uploadthing": "^6.13.2",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
