--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@siberiacancode/reactuse": "^0.0.65",
     "@tanstack/react-query": "^5.52.1",
     "@tanstack/react-query-devtools": "^5.52.1",
+    "@types/qs": "^6.9.15",
     "@uploadthing/react": "^6.7.2",
     "axios": "^1.7.5",
     "clsx": "^2.1.1",
@@ -27,6 +28,7 @@
     "next": "14.2.5",
     "npm": "^10.8.2",
     "prisma": "^5.18.0",
+    "qs": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
