--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@siberiacancode/reactuse": "^0.0.65",
     "@tanstack/react-query": "^5.52.1",
     "@tanstack/react-query-devtools": "^5.52.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/qs": "^6.9.15",
     "@uploadthing/react": "^6.7.2",
     "axios": "^1.7.5",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "install": "^0.13.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
+    "nextjs-toploader": "^3.6.15",
     "npm": "^10.8.2",
     "prisma": "^5.18.0",
     "qs": "^6.13.0",
