--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
+    "mui-tel-input": "^6.0.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "nextjs-toploader": "^3.6.15",
