--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-sortablejs": "^6.1.4",
     "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
+    "sharp": "^0.33.5",
     "sortablejs": "^1.15.2",
     "swiper": "^11.1.9",
     "uploadthing": "^6.13.2",
